--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dicee</title>
+    <title>Dice Game</title>
     <link href="styles.css" rel="stylesheet" />
     <link
       href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster"
@@ -13,7 +13,7 @@
   <body>
     <div class="container">
       <div class="header">
-        <h1>Welcome to the Dicee Game</h1>
+        <h1>Welcome to the Simple Dice Game</h1>
       </div>
       <div class="result">
         <h3>Rules: Press die 1 button. Then, press die 2 button. Player with the higher roll wins.</h3>
